--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-/target
+# Rust
+/target/
+**/*.rs.bk
+Cargo.lock
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Testing
+*.log
+.test_cache/
+
+# Documentation build
+/docs/book/
