--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nginx-discovery"
-version = "0.2.1"
+version = "0.3.0"
 edition = "2021"
 rust-version = "1.70.0"
 authors = ["Ajit Kumar <ajitkumar.pu@gmail.com>"]
@@ -38,6 +38,7 @@ clap = { version = "4.5", features = ["derive", "cargo"], optional = true }
 colored = { version = "2.1", optional = true }
 anyhow = { version = "1.0", optional = true }
 dialoguer = { version = "0.11", optional = true }
+tabled = { version = "0.15", optional = true }
 
 [dev-dependencies]
 pretty_assertions = "1.4"
@@ -66,6 +67,7 @@ cli = [
     "dep:colored",
     "dep:anyhow",
     "dep:dialoguer",
+    "dep:tabled",
     "system",
     "serde",
 ]
